# fastapi-template

./: .gitignore  .pre-commit-config.yaml  entrypoint.sh  pyproject.toml
src/: main.py
src/apps/user/: forms.py  models.py  routers.py  service.py
src/core/: codes.py  config.py  dependencies.py  exceptions.py  logger.py  middleware.py  model.py  response.py
src/db/: cache.py  database.py
src/db/migrations/models/: 0_20250517001319_init.py
src/tasks/: celery_app.py
